--- a/src/main/resources/templates/admin/system/index.html
+++ b/src/main/resources/templates/admin/system/index.html
@@ -166,7 +166,7 @@
                             <li>
                                 <a>
                                     <i class="fa fa-list"></i>
-                                    <span class="menu-text">更多</span>
+                                    <span class="menu-text">网站管理</span>
                                     <span class="fa fa-chevron-down"></span>
                                 </a>
                                 <ul class="nav child_menu">
