--- a/src/main/resources/templates/admin/system/list_dict.html
+++ b/src/main/resources/templates/admin/system/list_dict.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>列表</title>
-    <link rel="stylesheet" th:href="@{/modules/admin/css/list.css}" />
+    <link rel="stylesheet" th:href="@{/modules/admin2/css/list.css}" />
 
-    <script th:src="@{/modules/admin/js/jquery.min.js}"></script>
-    <script th:src="@{/modules/admin/js/select-ui.min.js}"></script>
+    <script th:src="@{/modules/admin2/js/jquery.min.js}"></script>
+    <script th:src="@{/modules/admin2/js/select-ui.min.js}"></script>
     <script type="text/javascript">
         $(document).ready(function(e) {
             $(".select").uedSelect({
