--- a/src/main/resources/templates/front/blog/theme1/footer.html
+++ b/src/main/resources/templates/front/blog/theme1/footer.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
+
+
 <footer id="footer" class="footer bg-white">
     <div class="footer-social">
         <div class="footer-container clearfix">
