--- a/src/main/resources/templates/front/blog/theme1/header.html
+++ b/src/main/resources/templates/front/blog/theme1/header.html
@@ -1,29 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="header">
-
-    <title>博客主页</title>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-
-    <link rel="shortcut icon" th:href="@{/modules/front/blog/theme1/img/favicon.png}" />
-    <link rel="apple-touch-icon" th:href="@{/modules/front/blog/theme1/img/apple-touch-icon.png}" />
-
-    <link rel="stylesheet" th:href="@{/modules/front/blog/theme1/css/xcode.min.css}" />
-    <link rel="stylesheet" th:href="@{/modules/front/blog/theme1/css/style.min.css}" />
 
 
-    <script th:src="@{/modules/front/blog/theme1/js/jquery.min.js}"></script>
-    <!--[if lt IE 9]>
-    <script th:src="@{/modules/front/blog/theme1/js/html5.min.js}"></script>
-    <script th:src="@{/modules/front/blog/theme1/js/respond.min.js}"></script>
-    <![endif]-->
-
-</head>
-<body class="bg-grey">
-
-<header id="header" class="header bg-white">
+<header th:fragment="header" id="header" class="header bg-white">
     <div class="navbar-container">
         <a href="" class="navbar-logo">
             <img th:src="@{/modules/front/blog/theme1/img/logo.png}" alt=""/>
