--- a/src/main/resources/templates/admin/system/dict_list.html
+++ b/src/main/resources/templates/admin/system/dict_list.html
@@ -19,17 +19,20 @@
                 </a>
 
                 <ul class="seachform">
-                    <form th:attr="action=@{/admin/system/dict/desLike}" method="post">
+                    <form name="dict_typeForm" th:attr="action=@{/admin/system/dict/findByType}" method="post">
                         <li><label>字典类型</label>
                             <div class="vocation">
-                                <select class="select">
+                                <th:block th:value="${type}"></th:block>
+                                <select th:name="type" class="select" onchange="document.dict_typeForm.submit()">
                                     <th:block th:each="att : ${list}">
-                                        <option th:value="${att}" th:text="${att}"></option>
+                                        <option th:value="${att}" th:text="${att}" th:selected="(${att} ne ${type})?'':'selected'"></option>
                                     </th:block>
                                 </select>
                             </div>
                         </li>
-                        <li><label>&nbsp;</label><input name="description" type="text" class="scinput" value="" /></li>
+                    </form>
+                    <form th:attr="action=@{/admin/system/dict/desLike}" method="post">
+                        <li><label>&nbsp;</label><input name="description" type="text" class="scinput" th:value="${description != null}?${description}:''" /></li>
                         <li><label>&nbsp;</label><input type="submit" class="scbtn" value="查询" /></li>
                     </form>
                 </ul>
@@ -42,6 +45,7 @@
                             <th>类型</th>
                             <th>描述</th>
                             <th>排序</th>
+                            <th>FF</th>
                             <th>操作</th>
                         </tr>
                     </thead>
@@ -53,6 +57,7 @@
                                 <td><th:block th:text="${form.type}"/></td>
                                 <td><th:block th:text="${form.description}"/></td>
                                 <td><th:block th:text="${form.sort}"/></td>
+                                <td><th:block th:text="${type}"/></td>
                                 <td>
                                     <a th:href="@{'/admin/system/dict/form/'+${form.id}}" target="main" class="tablelink">修改</a>
                                     <a th:href="@{'/admin/system/dict/delete/'+${form.id}}" target="main" class="tablelink" onclick="return del()">删除</a>
