--- a/src/main/resources/templates/admin/system/dict_form.html
+++ b/src/main/resources/templates/admin/system/dict_form.html
@@ -21,7 +21,7 @@
                         <li><label>标签:<b>*</b></label><input name="label" type="text" class="dfinput" style="width:518px;" th:value="${form != null}?${form.label}:''" /></li>
                         <li><label>类型:<b>*</b></label><input name="type" type="text" class="dfinput" style="width:518px;" th:value="${form != null}?${form.type}:''" /></li>
                         <li><label>描述:</label><input name="description" type="text" class="dfinput" style="width:518px;" th:value="${form != null}?${form.description}:''" /></li>
-                        <li><label>排序:</label><input name="sort" type="text" class="dfinput" style="width:518px;" th:value="${form != null}?${form.sort}:''" /></li>
+                        <li><label>排序:</label><input name="sort" type="text" class="dfinput" style="width:518px;" th:value="${form != null}?${form.sort}:10" /></li>
                         <li>
                             <label>&nbsp;</label>
                             <input type="submit" class="btn" value="提交" />
