--- a/src/main/resources/templates/admin/system/dict_form.html
+++ b/src/main/resources/templates/admin/system/dict_form.html
@@ -5,35 +5,64 @@
 <body>
     <th:block th:utext="${message}"/>
 
-    <div class="formbody">
 
-        <div id="usual1" class="usual">
+    <div style="margin: 10px;">
 
-            <div class="itab">
-                <ul><li><a class="selected">字典添加</a></li></ul>
+        <div class="panel panel-success">
+            <div class="panel-heading">
+                <div class="panel-title"><span><th:block th:text="${form != null}?'字典修改':'字典添加'"</span></div>
             </div>
 
-            <div id="form" class="tabson">
-                <form th:attr="action=@{/admin/system/dict/save}" method="post">
+            <div class="panel-body">
+                <form class="form-horizontal" role="form" th:attr="action=@{/admin/system/dict/save}" method="post">
                     <input type="hidden" name="id" th:value="${form != null}?${form.id}:''" />
-                    <ul class="forminfo">
-                        <li><label>键值:<b>*</b></label><input name="value" type="text" class="dfinput" style="width:518px;" th:value="${form != null}?${form.value}:''" /></li>
-                        <li><label>标签:<b>*</b></label><input name="label" type="text" class="dfinput" style="width:518px;" th:value="${form != null}?${form.label}:''" /></li>
-                        <li><label>类型:<b>*</b></label><input name="type" type="text" class="dfinput" style="width:518px;" th:value="${form != null}?${form.type}:''" /></li>
-                        <li><label>描述:</label><input name="description" type="text" class="dfinput" style="width:518px;" th:value="${form != null}?${form.description}:''" /></li>
-                        <li><label>排序:</label><input name="sort" type="text" class="dfinput" style="width:518px;" th:value="${form != null}?${form.sort}:10" /></li>
-                        <li>
-                            <label>&nbsp;</label>
-                            <input type="submit" class="btn" value="提交" />
-                            <input type="reset" class="btn" value="取消" />
-                        </li>
-                    </ul>
+                    <div class="form-group">
+                        <label for="value" class="col-sm-2 control-label">键值:</label>
+                        <div class="col-sm-8">
+                            <input type="text" name="value" class="form-control" id="value" placeholder="键值不能为空" th:value="${form != null}?${form.value}:''" />
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="label" class="col-sm-2 control-label">标签:</label>
+                        <div class="col-sm-8">
+                            <input type="text" name="label" class="form-control" id="label" placeholder="标签不能为空" th:value="${form != null}?${form.label}:''" />
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="type" class="col-sm-2 control-label">类型:</label>
+                        <div class="col-sm-8">
+                            <input type="text" name="type" class="form-control" id="type" placeholder="类型不能为空" th:value="${form != null}?${form.type}:''" />
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="description" class="col-sm-2 control-label">描述:</label>
+                        <div class="col-sm-8">
+                            <input type="text" name="description" class="form-control" id="description" placeholder="请输入描述" th:value="${form != null}?${form.description}:''" />
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="sort" class="col-sm-2 control-label">排序:</label>
+                        <div class="col-sm-8">
+                            <input type="text" name="sort" class="form-control" id="sort" placeholder="排序字段"  th:value="${form != null}?${form.sort}:10" />
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="reset" class="btn btn-info">取消</button>
+                            <button type="submit" class="btn btn-success">保存</button>
+                        </div>
+                    </div>
+
                 </form>
             </div>
-
         </div>
-
     </div>
+
 
 </body>
 
