--- a/src/main/resources/templates/admin/system/logs_list.html
+++ b/src/main/resources/templates/admin/system/logs_list.html
@@ -3,51 +3,82 @@
 <head th:replace="admin/tools/head"/>
 
 <body>
-<th:block th:utext="${message}"/>
 
-<div class="formbody">
+<div style="margin: 10px;">
+    <th:block th:utext="${message}"/>
+    <div class="panel panel-default">
+        <div class="form-horizontal">
+            <div class="panel-body">
+                <div class="row">
 
-    <div id="usual1" class="usual">
+                    <form name="dict_typeForm" th:attr="action=@{/admin/system/dict/findByType}" method="post">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label class="control-label col-md-4">字典类型</label>
+                                <div class="col-md-8">
+                                    <select class="form-control" th:name="type" onchange="document.dict_typeForm.submit()">
+                                        <option value="">全部</option>
+                                        <th:block th:each="att : ${list}">
+                                            <option th:value="${att}" th:text="${att}" th:selected="#{att == type}? 'selected':''"></option>
+                                        </th:block>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
 
-        <div class="itab">
-            <ul><li><a class="selected">日志列表</a></li></ul>
+                    <form name="dict_desForm" th:attr="action=@{/admin/system/dict/desLike}" method="post">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label class="control-label col-md-4">描述查询</label>
+                                <div class="col-md-8">
+                                    <input class="form-control" name="description" type="text" th:value="${description != null}?${description}:''">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <div params="vm.searchParams" class="ng-isolate-scope">
+                                    <button type="reset" class="btn btn-danger">清空</button>
+                                    <button type="submit" class="btn btn-success">
+                                        <span class="glyphicon glyphicon-search"></span>搜索
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+
+                </div>
+            </div>
         </div>
+    </div>
 
-        <div id="list" class="tabson">
-            <a th:href="@{/admin/system/logs/empty}" target="main" >
-                <ul class="toolbar1" onclick="return empty()"><li><span>+</span>清空</li></ul>
-            </a>
+    <nav>
+        <ul class="pager">
+            <li class="previous"><span><strong>字典列表</strong></span></li>
+            <li class="next">
+                <a class="text-success" th:href="@{/admin/system/dict/form/null}" target="main"><span class="glyphicon glyphicon-plus"></span>添加</a>
+            </li>
+        </ul>
+    </nav>
 
-            <ul class="seachform">
-                <form name="logs_type" th:attr="action=@{/admin/system/logs/findByType}" method="post">
-                    <li><label>日志类型</label>
-                        <div class="vocation">
-                            <select th:name="type" class="select" onchange="document.logs_type.submit()">
-                                <th:block th:each="att : ${dict_one}">
-                                    <option th:value="${att.value}" th:text="${att.label}"></option>
-                                </th:block>
-                            </select>
-                        </div>
-                    </li>
-                </form>
-                <form name="logs_level" th:attr="action=@{/admin/system/logs/findByLevel}" method="post">
-                    <li><label>日志级别</label>
-                        <div class="vocation">
-                            <select th:name="level" class="select" onchange="document.logs_level.submit()">
-                                <th:block th:each="att : ${dict_two}">
-                                    <option th:value="${att.value}" th:text="${att.label}"></option>
-                                </th:block>
-                            </select>
-                        </div>
-                    </li>
-                </form>
-                <form th:attr="action=@{/admin/system/dict/desLike}" method="post">
-                    <li><label>&nbsp;</label><input name="ip" type="text" class="scinput" th:value="${ip != null}?${ip}:''" /></li>
-                    <li><label>&nbsp;</label><input type="submit" class="scbtn" value="查询" /></li>
-                </form>
-            </ul>
+    <div class="panel panel-success">
 
-            <table class="tablelist">
+        <div class="panel-body">
+
+            <table class="table table-striped table-bordered table-hover">
+                <colgroup>
+                    <col style="width:10%">
+                    <col style="width:5%">
+                    <col style="width:5%">
+                    <col style="width:10%">
+                    <col style="width:20%">
+                    <col style="width:5%">
+                    <col style="width:15%">
+                    <col style="width:15%">
+                    <col style="width:15%">
+                </colgroup>
                 <thead>
                 <tr>
                     <th>标题</th>
@@ -61,35 +92,29 @@
                     <th>操作</th>
                 </tr>
                 </thead>
-                <tbody>
-                <th:block th:each="form:${pageList.getContent()}">
-                    <tr>
-                        <td><th:block th:text="${form.title}"/></td>
-                        <td><th:block th:text="${form.userName}"/></td>
-                        <td><th:block th:text="${form.level == '1'}?'info':'error'"/></td>
-                        <td><th:block th:text="${form.type == '1'}?'系统日志':'操作日志'"/></td>
-                        <td><th:block th:text="${form.requestUri}"/></td>
-                        <td><th:block th:text="${form.method}"/></td>
-                        <td><th:block th:text="${form.remoteAddr}"/></td>
-                        <td><th:block th:text="${form.createDate}"/></td>
-                        <td>
-                            <a th:href="@{'/admin/system/logs/findById/'+${form.id}}" target="main" class="tablelink">查看详情</a>
-                            <a th:href="@{'/admin/system/logs/delete/'+${form.id}}" target="main" class="tablelink" onclick="return del()">删除</a>
-                        </td>
-                    </tr>
-                </th:block>
+                <tbody ui-sortable>
+                    <th:block th:each="form:${pageList.getContent()}">
+                        <tr>
+                            <td><th:block th:text="${form.title}"/></td>
+                            <td><th:block th:text="${form.userName}"/></td>
+                            <td><th:block th:text="${form.level == '1'}?'info':'error'"/></td>
+                            <td><th:block th:text="${form.type == '1'}?'系统日志':'操作日志'"/></td>
+                            <td><th:block th:text="${form.requestUri}"/></td>
+                            <td><th:block th:text="${form.method}"/></td>
+                            <td><th:block th:text="${form.remoteAddr}"/></td>
+                            <td><th:block th:text="${form.createDate}"/></td>
+                            <td>
+                                <a th:href="@{'/admin/system/logs/delete/'+${form.id}}" target="main" class="tablelink" onclick="return del()"><button class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove"></span>删除</button></a>
+                                <a th:href="@{'/admin/system/logs/findById/'+${form.id}}" target="main" class="tablelink"><button class="btn btn-xs btn-success">查看详情</button></a>
+                            </td>
+                        </tr>
+                    </th:block>
                 </tbody>
             </table>
-
-            <div th:replace="admin/tools/page"></div>
-
         </div>
-
     </div>
 
-    <script type="text/javascript">
-        $('.tablelist tbody tr:odd').addClass('odd');
-    </script>
+    <nav th:replace="admin/tools/page"></nav>
 
 </div>
 
