--- a/src/main/resources/templates/admin/tools/page.html
+++ b/src/main/resources/templates/admin/tools/page.html
@@ -1,40 +1,53 @@
 <!DOCTYPE html>
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
 
-<div th:fragment="page  " class="pagin">
-    <div class="message">共<i class="blue"><th:block th:text="${pageList.totalElements}"/></i>条记录<i class="blue">,<th:block th:text="${pageList.totalPages}"/></i>页，当前显示第&nbsp;<i class="blue"><th:block th:text="${pageList.number + 1}"/>&nbsp;</i>页</div>
+<nav th:fragment="page">
 
-    <ul class="paginList" style="text-align: center;">
+    <div class="row">
 
-        <li th:if="${pageList.hasPrevious()}" class="paginItem">
-            <a th:href="@{${url}(page=${pageList.getNumber() - 1})}"><span class="pagepre"></span></a>
-        </li>
+        <div class="col-4" style="margin-left: 10px;">
 
-        <div th:if="${(pageList.totalPages le 10) and (pageList.totalPages gt 0)}" style="width: 330px;">
-            <span th:each="pg : ${#numbers.sequence(0, pageList.totalPages - 1)}">
-                <li th:if="${pg eq pageList.getNumber()}" class="paginItem current">
-                    <a th:text="${pg+1}">${pageNumber}</a>
-                </li>
-                <li th:unless="${pg eq pageList.getNumber()}" class="paginItem">
-                    <a th:href="@{${url}(page=${pg})}" th:text="${pg+1}">${pageNumber}</a>
-                </li>
-            </span>
+            <ul class="pager pull-left">
+                <li><span>共<i class="blue"><th:block th:text="${pageList.totalElements}"/></i> 条记录 <th:block th:text="${pageList.totalPages}"/></i>页 当前显示第&nbsp;<i class="blue"><th:block th:text="${pageList.number + 1}"/>&nbsp;</i>页</span></li>
+            </ul>
+
         </div>
 
-        <div th:if="${pageList.totalPages gt 10}" style="width: 330px;">
-            <li th:if="${pageList.number-2 ge 0}" class="paginItem"><a th:href="@{${url}(page=${pageList.number}-2)}" th:text="${pageList.number-1}"></a></li>
-            <li th:if="${pageList.number-1 ge 0}" class="paginItem"><a th:href="@{${url}(page=${pageList.number}-1)}" th:text="${pageList.number}"></a></li>
-            <li class="paginItem current"><a th:text="${pageList.number+1}">${pageNumber}</a></li>
-            <li th:if="${pageList.number+1 lt pageList.totalPages}" class="paginItem"><a th:href="@{${url}(page=${pageList.number}+1)}" th:text="${pageList.number+2}"></a></li>
-            <li th:if="${pageList.number+2 lt pageList.totalPages}" class="paginItem"><a th:href="@{${url}(page=${pageList.number}+2)}" th:text="${pageList.number+3}"></a></li>
+        <div class="col-8">
+
+
+            <ul class="pager pull-right" style="margin-right: 10px;">
+
+                <li th:if="${pageList.hasPrevious()}" class="paginItem">
+                    <a th:href="@{${url}(page=${pageList.getNumber() - 1})}">&laquo;</a>
+                </li>
+
+
+                <div th:if="${(pageList.totalPages le 10) and (pageList.totalPages gt 0)}">
+                    <span th:each="pg : ${#numbers.sequence(0, pageList.totalPages - 1)}">
+                        <li th:if="${pg eq pageList.getNumber()}" class="active">
+                            <a th:text="${pg+1}">${pageNumber}</a>
+                        </li>
+                        <li th:unless="${pg eq pageList.getNumber()}">
+                            <a th:href="@{${url}(page=${pg})}" th:text="${pg+1}">${pageNumber}</a>
+                        </li>
+                    </span>
+                </div>
+
+                <div th:if="${pageList.totalPages gt 10}">
+                    <!--<li th:if="${pageList.number-2 ge 0}"><a th:href="@{${url}(page=${pageList.number}-2)}" th:text="${pageList.number-1}"></a></li>-->
+                    <li th:if="${pageList.number-1 ge 0}"><a th:href="@{${url}(page=${pageList.number}-1)}" th:text="${pageList.number}"></a></li>
+                    <li class="active"><a th:text="${pageList.number+1}">${pageNumber}</a></li>
+                    <li th:if="${pageList.number+1 lt pageList.totalPages}"><a th:href="@{${url}(page=${pageList.number}+1)}" th:text="${pageList.number+2}"></a></li>
+                    <!--<li th:if="${pageList.number+2 lt pageList.totalPages}"><a th:href="@{${url}(page=${pageList.number}+2)}" th:text="${pageList.number+3}"></a></li>-->
+                </div>
+
+                <li th:if="${pageList.hasNext()}" class="paginItem">
+                    <a th:href="@{${url}(page=${pageList.getNumber() + 1})} ">&raquo;</a>
+                </li>
+            </ul>
+
         </div>
+    </div>
+</nav>
 
-        <li th:if="${pageList.hasNext()}" class="paginItem">
-            <a th:href="@{${url}(page=${pageList.getNumber() + 1})} "><span class="pagenxt"></span></a>
-        </li>
-
-    </ul>
-
-
-    </ul>
-</div>
